# modern-cmake

./: README.md
fetch/: CMakeLists.txt  README.md
